# emoji-motd

./: CLAUDE.md  pyproject.toml
emoji_motd/: __init__.py  __main__.py  config.py  context.py  core.py  renderer.py
emoji_motd/sections/: blank.py  datetime_info.py  emoji_garden.py  oblique.py  oblique_strategies.py  starfield.py  synth_wave.py  weather.py
