[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emoji-motd"
version = "0.1.0"
description = "Pluggable, terminal-native emoji Message-of-the-Day banners"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
emoji-motd = "emoji_motd.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
